Use new code font generally to fix Android monospace
Using a specific font, and hosting it ourselves, allows us to ensure consistent behavior and a code font that covers the Nushell table border drawings characters.

Adds FiraCode font, which is under OFL (SIL Open Font license).

https://github.com/tonsky/FiraCode

Introduces a 100 kb font file download, which should happen only once through adequate cashing.

--- a/.vuepress/styles/index.scss
+++ b/.vuepress/styles/index.scss
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'Fira Code';
+  src: url('/fonts/FiraCode-Regular.woff2') format('woff2'), url("woff/FiraCode-Regular.woff") format("woff");
+  font-weight: 400;
+  font-style: normal;
+}
+
 .navbar .navbar-items-wrapper {
   flex-direction: row-reverse;
 }
@@ -29,7 +36,7 @@ div[class*='language-'].line-numbers-mode .line-numbers {
  */
 :root {
   --code-line-height: 1.1;
-  --font-family-code: Consolas, Monaco, 'Andale Mono', 'DejaVu Sans Mono',
+  --font-family-code: 'Fira Code', Consolas, Monaco, 'Andale Mono', 'DejaVu Sans Mono',
     'Ubuntu Mono', monospace;
 }
 
